--- a/Pages/Law Notes/Law Notes.html
+++ b/Pages/Law Notes/Law Notes.html
@@ -625,7 +625,53 @@
       consider that the said company’s trademark was well-known amongst the 
       consumers in the country.
     </p>
-    
+    <p></p>
+    <h4>UNIVERSALITY DOCTRINE</h4>
+    <p></p>
+    <p>
+      According to the Universality doctrine, once a trademark is recognized or registered in one country, it gains universal recognition. It favors trans-border reputation and is an exception to the Territoriality doctrine. This means that if a trademark enjoys the status of a well-known trademark in the United States of America, it would enjoy the same status with regard to its goods or services in India as well, or any other country for that matter.
+    </p>
+    <p></p>
+    <p>
+      This principle respects the concept of the trans-border reputation of a brand. It is often considered as an exception to the aforementioned territoriality principle. 
+    </p>
+    <p></p>
+    <p>
+      The possibility of a brand having a universal reputation is not ignored when courts choose to apply this principle to a case. 
+    </p>
+    <p></p>
+    <p>
+      Milmet Oftho Industries & Ors v. Allergan Inc 2004 (28) PTC 585 SC
+      The Supreme Court, after establishing the trans-border reputation of the Respondents stated that the mere fact that the Respondents have not been using the mark in India would be irrelevant if they were first in the world market.
+    </p>
+    <p></p>
+    <h5>RISE OF TERRITORIALITY OVER UNIVERSALITY</h5>
+    <p></p>
+    <p>
+      The Indian courts have recognised backed both principles. This raises an important issue of whether well-known trademarks should be governed by the territoriality doctrine or the universality theory.
+    </p>
+    <p></p>
+    <p>
+      The territoriality concept is favoured by judicial and academic opinion throughout the world because it protects domestic traders from huge international firms situated in other nations. The widely held belief is that a firm claiming the status of a “well-known” trademark in a jurisdiction must also have a reputation in that territory.
+    </p>
+    <p></p>
+    <p>
+      The Universality concept contends that the recognition and reputation of a trademark are not dependent on the sale of products carrying the mark in question. Advertising and promoting the mark through various types of media is sufficient to build reputation and goodwill within a certain geographical region. However, this view contradicts the equality principle since, in order to compare two objects, they must first be equals. As a result, if a business has not released its product or has no consumers or a reputation in a given market, it cannot be compared to a corporation that has an existing product as well as a consumer base in that area.
+    </p>
+    <p></p>
+    <p>
+      Starbucks vs. British Sky Broadcasting [2015] UKSC 31
+      The Apex court of U.K held that, no trader can complain of passing-off as against him in any territory in which he has no customers and nobody who is in trade relation with him.
+    </p>
+    <p></p>
+    <p>
+      Toyota Jidosha Kabushiki Kaisha V. M/S Prius Auto Industries Limited 2018 (73) PTC 1: The supreme court held that it must be assessed if there has been an overflow of the reputation and goodwill of the mark utilized by the claimant who has launched the passing off action in the country in the issue. The Hon'ble Supreme Court's ruling establishes a new standard for examining evidence to claim trans-border repute in India. As a result, the trademark must be recognized and have a separate existence in each sovereign country. After reviewing the jurisprudence on trans-border reputation in the United Kingdom and Australia, the Supreme Court concluded that the problem of trans-border reputation would be controlled by the territoriality concept in India.
+    </p>
+    <p></p>
+    <p>
+      The current legal position in India on trans-border reputation is that, while the concept is recognized and the presence of an actual business establishment is not required for establishing a trans-border reputation, the existence or non-existence of trans-border reputation is a question of fact. Evidence supporting the claim must be explosive or ground-breaking. The spread of reputation can occur via the internet, advertisement, or any other method that gives inhabitants of a country with adequate knowledge about a brand and its products.
+    </p>
+
 
 
     
