--- a/Pages/Trademark.html
+++ b/Pages/Trademark.html
@@ -6,3 +6,48 @@
     <title>Document</title>
 </head>
 <body>
+   <h2>BEYOND BLACK AND WHITE: CAN COLOR BE TRADEMARKED?</h2>
+   <p></p>
+   <p>
+    According to Indian trademark regulations, colors can be registered as trademarks if they have gained uniqueness and are seen by consumers as being connected to a certain brand. It must be established that a color has acquired secondary significance and is closely associated with a particular item or service in order for it to be registered as a trademark.
+   </p>
+   <p></p>
+   <h4>Why should we trademark color?</h4>
+   <p></p>
+   <p>
+    Organizations frequently try trademarking colors to establish a strong connection between a certain color and their brand. This connection aids in market distinctiveness and brand identification. Some well-known examples of color trademarks include UPS’s brown logo and Tiffany & Co.’s distinctive blue.
+   </p>
+   <p></p>
+   <h4>When colors can be trademarked?</h4>
+   <p></p>
+   <p>
+    The applicant must present proof that the color has become distinctive via widespread usage in commerce and that consumers predominantly associate the color with the source of the products or services in order for the color to be effectively registered as a trademark.
+   </p>
+   <p></p>
+   <p>
+    It’s important to remember that registering a color trademark might be difficult. The applicant must demonstrate that the color has become unique and isn’t merely a standard for the industry or a functional feature of the product. Furthermore, colors can be included in a trademark, but usually only in a larger logo or design, which makes it simpler to prove uniqueness.
+   </p>
+   <p></p>
+   <p>
+    The Trademark Registry must receive an application before a trademark may be registered in India. A visual illustration of the color being claimed must be included in this application, and the applicant must be able to demonstrate the color’s uniqueness and connection to the products or services they offer.
+   </p>
+   <p></p>
+   <h4>PROCESS</h4>
+   <p></p>
+   <h4>Section 18: Trademark Registration</h4>
+   <p></p>
+   <p>
+    Section 18(1): The requirements for registering a trademark are covered in this section. It describes the kinds of marks that can be registered, the level of distinctiveness needed to be registered, and how to apply for registration.
+   </p>
+   <p></p>
+   <p>
+    Section 18(2): The precise requirements that a mark must meet to be registered as a trademark. It states that the mark must be able to identify one person’s goods or services from those of others.
+   </p>
+   <p></p>
+   <p>
+    Section 18(3): The registration of some marks that are deemed generic or descriptive, or that lack distinguishing character, is prohibited.
+   </p>
+   <p></p>
+   <p>
+    These parts of the Trademarks Act, among other laws, would be pertinent in demonstrating the distinctiveness and potential for a color to serve as a trademark while evaluating the registration of a color as a trademark in India. For a color to be eligible for registration, it must have developed a secondary meaning or uniqueness that links it to the particular products or services.
+   </p>
