--- a/Pages/Trademark.html
+++ b/Pages/Trademark.html
@@ -34,8 +34,8 @@
    <p></p>
    <h4>PROCESS</h4>
    <p></p>
-   <img src="/Pages/trademark/trademark process.png" class="trademark process"
-   
+   <img src="/Pages/trademark/trademark process.png" class="trademark process">
+   <p></p>
    <h4>Section 18: Trademark Registration</h4>
    <p></p>
    <p>
