--- a/Pages/Law Notes/Law Notes.html
+++ b/Pages/Law Notes/Law Notes.html
@@ -672,6 +672,27 @@
     <p>
       The current legal position in India on trans-border reputation is that, while the concept is recognized and the presence of an actual business establishment is not required for establishing a trans-border reputation, the existence or non-existence of trans-border reputation is a question of fact. Evidence supporting the claim must be explosive or ground-breaking. The spread of reputation can occur via the internet, advertisement, or any other method that gives inhabitants of a country with adequate knowledge about a brand and its products.
     </p>
+    <p></p>
+    <h6>DOCTRINE OF FIRST SALE</h6>
+    <p></p>
+    <p>
+      The concept of first sale, in essence, limits the power of distribution of copyright owners. 
+      It is predicated on the premise that once a copyright owner has relinquished title to a specific copy embodying his work, subsequent possessors of the copy should not be forced to negotiate with the owner each time they consider a further sale or other transfer. When an author, for example, sells a copy of her book, the property that is transferred is not her copyright in the book, but rather the property rights in that specific physical copy of the book. As a result, the customer is not permitted to replicate the book but is permitted to resell it, as selling is an essential component of the business.
+    </p>
+    <p></p>
+    <p>
+      Under the first sale doctrine ownership of physical copy of copyrighted work permits the owner of the item to lend, resell and give away and destroy the copyrighted item, but the owner is not granted the right to copy the item in its entirety. That is because the transfer of physical copy does not include transfer of copyrighted work. The legal principles apply to physical items as well as digital content that is downloaded over the internet.
+    </p>
+    <p></p>
+    <p>
+      The first sale doctrine allows the purchaser to transfer a purchaser to transfer a particular legally acquired copy of protected work without permission once it has been obtained. That means the distribution right of copyrighted holder end on that particular copy once it has been sold.
+      The first sale doctrine prohibits renting and leasing recorded music and computer software although private non-profit archives and libraries are allowed to lend these items provided they include a copyright notice on the copy. According to the copyright Act consumers cannot make copies of computer program contrary to license but resell what is owned.
+    </p>
+    <p></p>
+    <p>
+      John Wiley and Sons Inc. and others v. Prabhat Chander Kumar Jain and ors (2010) PTC :In this case, the defendants were selling low-price editions of the Plaintiff’s books all over the world through their websites, while low-price editions were meant for sale only in certain territories. 
+      The defendants argued that since low-priced editions were purchased in India in accordance with the law and thereafter exported, no infringement is committed within the meaning of the copyright act. The court observed that the doctrine will not apply because there was a licensing agreement between the plaintiffs and their licensees. The doctrine of first sale would not affect the copyright owners though it may partially exhaust the rights of the exclusive licensee. The court held the doctrine applies only with respect to the exclusive licensees and not the owners. Hence, there is an infringement of the copyright owner.
+    </p>
 
 
 
