--- a/Pages/copright.html
+++ b/Pages/copright.html
@@ -148,5 +148,50 @@
     In summary, Section 17 of the Copyright Act, 1957, is a legal tapestry that navigates the complex terrain of copyright ownership, considering various scenarios involving commissioned work, employment, public representation, and government involvement. It balances the scales between creators and entities that provide the platform for creative expression, 
     ensuring a fair distribution of ownership rights while recognizing the roles played by different parties in the creative process.
    </p>
+   <p></p>
+   <h1>Section 13 and Section 14 of copyright act, 1957</h1>
+   <p></p>
+   <p>
+    The Indian Copyright Act of 1957 protects artistic works by defining the boundaries of copyright protection and defending the rights of authors. This legal framework’s Sections 13 and 14 play a crucial role in outlining the boundaries of this protection and the exclusive rights accorded to copyright holders.
+   </p>
+   <p></p>
+   <h4>Section 13: Works Protected by Copyright</h4>
+   <p></p>
+   <p>
+    Section 13 serves as the gatekeeper in the field of copyright protection, defining the many types of creative works that are eligible for the protection of copyright laws. It throws its arms wide open to the literary world, embracing poetry, novels, and even computer programmes. Under its protection, the stage, which includes plays, scripts, and choreography, comes to life. It welcomes heartfelt songs, breathtaking architectural details, and even moments caught in time frozen in pictures. In addition, this part is a sanctuary for the silver screen and the sounds that enthral us through recordings.
+   </p>
+   <h4>Section 14: Definition of Copyright</h4>
+   <p></p>
+   <p>
+    The exclusive rights granted to authors or owners of works protected by copyright are outlined in Section 14, which is the lifeblood of copyright holders. These rights serve as the cornerstones that uphold the authors’ authority over their works, giving them the freedom to choose how they are performed in public, distributed, copied, and shared with the general public.
+   </p>
+   <p></p>
+   <p>
+    However, the real-world tales that inform and hone these legal frameworks are just as important to the legal environment as the statutes themselves. The route has been paved with landmark cases from India, which have deepened and refined our grasp of copyright law.
+   </p>
+   <p></p>
+   <p>
+    RG Anand v. Deluxe Films
+   </p>
+   <p></p>
+   <p>
+    The Supreme Court of India shaped the parameters of copyright law in this seminal case. The Court reaffirmed that an idea, no matter how brilliant, is not protected by copyright and underlined the importance of originality in copyright. The secret to copyright protection is only found in the material manifestation of an idea. This decision established the concept of originality in the field of copyright protection and served as a benchmark for subsequent copyright decisions.
+   </p>
+   <p></p>
+   <p>
+    Amar Nath Sehgal v. Union of India 
+   </p>
+   <p></p>
+   <p>
+    In this instance, a turning point was reached for the field of artistic works. It highlighted the inviolability of an artist’s creativity and said that the artist has rights over his creative output that survive his death, guaranteeing moral rights are upheld even after the artist is gone. The ruling shaped the notion of copyright in the creative sphere by highlighting the significance of recognising and defending an artist’s moral rights.
+   </p>
+   <p></p>
+   <p>
+    Cases that have set the standard for artists, consumers, and legal professionals alike have served as lighthouses. In addition to interpreting the legislative provisions, they have established and improved the fundamentals of copyright law in India by giving the framework life and context.
+   </p>
+   <p></p>
+   <p>
+    In summary, these important instances and Sections 13 and 14 of the Indian Copyright Act, 1957 act as a compass for striking a careful balance between the rights of authors and the interests of society at large. By safeguarding the domains of artistic expression and guaranteeing appropriate utilisation and access, they construct a legal framework that upholds and values the contributions of both artists and those who enjoy their works.
+   </p>
 </body>
 </html>
