--- a/Pages/copright.html
+++ b/Pages/copright.html
@@ -171,7 +171,7 @@
    </p>
    <p></p>
    <p>
-    RG Anand v. Deluxe Films
+    RG Anand v. Deluxe Films AIR 1978 SC 1613
    </p>
    <p></p>
    <p>
@@ -179,7 +179,7 @@
    </p>
    <p></p>
    <p>
-    Amar Nath Sehgal v. Union of India 
+    Amar Nath Sehgal v. Union of India 117 (2005) DLT 717 
    </p>
    <p></p>
    <p>
