added: law notes

--- a/Pages/Law Notes/Law Notes.html
+++ b/Pages/Law Notes/Law Notes.html
@@ -463,6 +463,68 @@
       encouraging innovation, and safeguarding the interests of authors in an increasingly interconnected world.
     </p>
     <img src="BERNE.png" class="berne">
+    <br></br>
+    <h4>PARIS CONVENTION</h4>
+    <p></p>
+    <p>
+      One of the first and most important international treaties protecting intellectual property rights is the Paris Convention for the Protection of Industrial Property, which was created in 1883. A more unified and organised international system for the protection of inventions, trademarks, and industrial designs was fostered by this agreement, which was a trailblazing step in realising the necessity for uniform intellectual property protection across national borders.
+    </p>
+    <p></p>
+    <p>
+      One of its main points is that if you are a citizen of one nation and you create something innovative, such as a novel device or an iconic brand name, you should be entitled to the same protections abroad as you would at home. This puts an end to prejudice or unjust treatment of individuals from different backgrounds.
+    </p>
+    <p></p>
+    <p>
+      Three main components serve as the foundation for the Paris Convention’s goals and principles:
+    </p>
+    <p></p>
+    <ul>
+      <li>National Treatment: The idea of national treatment is one of the Convention’s core tenets. It requires that, with regard to intellectual property rights, each member nation treat the citizens of other member nations no less favourably than it treats its own citizens. This implies that, in each member nation, foreign inventors, artists, and intellectual property owners need to be accorded the same legal treatment as citizens.</li>
+      <li>Right of Priority: The Convention established the notion of the “right of priority,” which grants a petitioner the ability to submit an application for protection in another member nation within a given time frame without losing their initial filing date. An innovator, for example, may submit for patent or trademark protection in one member nation and then, within a certain period of time (usually 6 to 12 months), file for protection in other member countries, keeping the original filing date. This is helpful since it frees the innovator to investigate different markets without worrying about losing their patent rights through further applications.</li>
+      <li>Common Rules and Standards: Among its member nations, the Convention seeks to standardise a number of laws and regulations pertaining to trade names, industrial designs, patents, trademarks, and other areas of intellectual property rights. A worldwide uniform and predictable framework for intellectual property protection is made possible by this standardisation.</li>
+    </ul>
+    <p></p>
+    <p>
+      Furthermore, the Agreement on Trade-Related Aspects of Intellectual Property Rights (TRIPS), which is overseen by the World Trade Organisation (WTO), and other regional accords have been impacted by and built upon by the Paris Convention. It has made a major contribution to the global development of a more thorough and organised approach to intellectual property rights. 
+    </p>
+    <p></p>
+    <p>
+      The goals and rules of the treaty have established a solid framework for global collaboration and comprehension in the field of intellectual property rights. It has prompted nations to collaborate in order to create legal frameworks and procedures that provide stronger protection and enforcement of intellectual property rights, therefore assisting artists and inventors and promoting creativity and innovation on a worldwide scale.
+    </p>
+    <p></p>
+    <p>
+      It’s crucial to remember that, even while the Paris Convention establishes basic criteria, individual member nations may have additional rules and regulations pertaining to intellectual property that go above and beyond the Convention’s baseline requirements. As a result, the treaty provides a general framework but allows individual nations to opt to impose stricter safeguards if they so want.
+    </p>
+    <p></p>
+    <p>
+      All in all, it functions as a kind of global consensus that safeguards innovative concepts and discoveries while advancing equity and inspiring individuals to continue doing amazing things.
+    </p>
+    <p></p>
+    <img src="/Pages/Law Notes/paris convention.png" class="Paris Convention">
+    <p></p>
+    <br></br>
+    <h4>UNIVERSAL COPYRIGHT CONVENTION</h4>
+    <p></p>
+    <p>
+      Under the direction of UNESCO (the United Nations Educational, Scientific, and Cultural Organisation), an international agreement known as the Universal Copyright Convention (UCC) was created in 1952. The UCC’s principal goal is to further the worldwide protection of authors’ rights over their creative, artistic, and scientific works.
+    </p>
+    <p></p>
+    <p>
+      The UCC’s main goal is to safeguard the rights of creators, including writers, painters, musicians, and other creative people, by making sure that their creations are valued and safeguarded globally. It encourages global collaboration for the safeguarding of creative works.
+    </p>
+    <p></p>
+    <ul>
+      <li>National Treatment: The UCC is based on the concept of national treatment, just as other international treaties such as the Paris Convention. It mandates that member nations give international artists’ works the same degree of protection as they do to their own citizens. This guarantees that authors from other member nations will receive the same treatment and won't face prejudice.</li>
+      <li>Flexibility: The UCC recognises and recognises the variations in state copyright laws. Although it establishes a set of guidelines for copyright protection, it gives member nations latitude in how these guidelines are applied to account for the various degrees of protection found in various legal frameworks.</li>
+      <li>Works Covered: The UCC covers a wide range of artistic, literary, and musical works in addition to translations, adaptations, and other types of intellectual property. It seeks to safeguard different kinds of artistic expression.</li>
+      <li>Copyright Symbol: To signify copyright protection, the UCC established the globally recognised copyright symbol “©”. This icon shows that a work is covered by copyright laws and supports artists in asserting their legal rights.</li>
+      <li>Relation to the Berne Convention: The UCC provides a significant international instrument for copyright protection as an alternative to the Berne Convention. The UCC, in contrast, allows greater freedom and could be more appropriate in some nations, particularly those with distinct copyright laws, while the Berne Convention offers more extensive and stringent regulations.</li>
+    </ul>
+    <p></p>
+    <p>
+      The UCC has significantly influenced how intellectual property rights are protected internationally. It has given copyright protection a standardised method, especially for nations with differing copyright laws or those not party to the Berne Convention. It has aided in the international recognition and protection of artists' rights and the transnational flow of creative works by creating shared values and norms.
+    </p>
+    <p></p>
     <br></br>  
     <p></p>
     <h1>IPR DOCTRINES</h1>
