added: law notes

--- a/Pages/Law Notes/Law Notes.html
+++ b/Pages/Law Notes/Law Notes.html
@@ -464,7 +464,7 @@
     </p>
     <img src="BERNE.png" class="berne">
     <br></br>
-    <h4>PARIS CONVENTION</h4>
+    <h3>PARIS CONVENTION</h3>
     <p></p>
     <p>
       One of the first and most important international treaties protecting intellectual property rights is the Paris Convention for the Protection of Industrial Property, which was created in 1883. A more unified and organised international system for the protection of inventions, trademarks, and industrial designs was fostered by this agreement, which was a trailblazing step in realising the necessity for uniform intellectual property protection across national borders.
@@ -503,7 +503,7 @@
     <img src="/Pages/Law Notes/paris convention.png" class="Paris Convention">
     <p></p>
     <br></br>
-    <h4>UNIVERSAL COPYRIGHT CONVENTION</h4>
+    <h3>>UNIVERSAL COPYRIGHT CONVENTION</h3>
     <p></p>
     <p>
       Under the direction of UNESCO (the United Nations Educational, Scientific, and Cultural Organisation), an international agreement known as the Universal Copyright Convention (UCC) was created in 1952. The UCC’s principal goal is to further the worldwide protection of authors’ rights over their creative, artistic, and scientific works.
