added: law notes

--- a/Pages/Law Notes/Law Notes.html
+++ b/Pages/Law Notes/Law Notes.html
@@ -503,7 +503,7 @@
     <img src="/Pages/Law Notes/paris convention.png" class="Paris Convention">
     <p></p>
     <br></br>
-    <h3>>UNIVERSAL COPYRIGHT CONVENTION</h3>
+    <h3>UNIVERSAL COPYRIGHT CONVENTION</h3>
     <p></p>
     <p>
       Under the direction of UNESCO (the United Nations Educational, Scientific, and Cultural Organisation), an international agreement known as the Universal Copyright Convention (UCC) was created in 1952. The UCC’s principal goal is to further the worldwide protection of authors’ rights over their creative, artistic, and scientific works.
