added: law notes

--- a/Pages/Law Notes/Law Notes.html
+++ b/Pages/Law Notes/Law Notes.html
@@ -755,7 +755,87 @@
       John Wiley and Sons Inc. and others v. Prabhat Chander Kumar Jain and ors (2010) PTC :In this case, the defendants were selling low-price editions of the Plaintiff’s books all over the world through their websites, while low-price editions were meant for sale only in certain territories. 
       The defendants argued that since low-priced editions were purchased in India in accordance with the law and thereafter exported, no infringement is committed within the meaning of the copyright act. The court observed that the doctrine will not apply because there was a licensing agreement between the plaintiffs and their licensees. The doctrine of first sale would not affect the copyright owners though it may partially exhaust the rights of the exclusive licensee. The court held the doctrine applies only with respect to the exclusive licensees and not the owners. Hence, there is an infringement of the copyright owner.
     </p>
-
+    <br></br>
+    <h4>DOCTRINE OF PRIOR USE</h4>
+    <p></p>
+    <p>
+      The owner of the registered trade mark has been given an exclusive invaluable right including the use of the said trade mark to the exclusion of others. However, this exclusive right to use the trade mark is not an absolute right in favour of the registered trade mark owner. The registration of a trade mark is subject to opposition by the opponent on various grounds enumerated under the Act either prior to registration or post grant of registration. An application for the registration of the trade mark shall be denied if the trade mark would fall under grounds of rejection mentioned under sections 9 and 11 of the trademarks act of 1999. This is subject to the exception when the mark has acquired distinctiveness because of its use prior to registration or if the mark is otherwise a well-known trade mark. There are several safeguards that have been given under the Act to safeguard the interest of unregistered trade mark users. Even if the proprietor owns the unregistered trade mark, the seminal theme of the Act is based on the “first user of the trade mark”.
+    </p>
+    <p></p>
+    <p>
+      It is a well-accepted judicial principle that the rights of a prior user of the mark are kept on a higher pedestal than even that of the proprietor of a registered trademark. Prior user’s rights will override those of a subsequent user even though the subsequent user had been accorded registration of its trademark.
+    </p>
+    <p></p>
+    <p>
+      According to Section 34 of the Trademarks Act, 1999 “the proprietor of a registered trademark or a registered user cannot interfere with the use of any identical or similar mark if the person has been using the mark from an earlier date”. The section provides for protecting the vested rights preventing a proprietor or registered user of a trademark from interfering with the honest use of an identical trademark or a mark nearly resembling the registered mark.
+    </p>
+    <p></p>
+    <h5>FUNDAMENTAL REQUIREMENTS OF PRIOR USE:</h5>
+    <p></p>
+    <p>
+      (1) The use of a mark identical or nearly resembling the registered mark, by a third person, must be in relation to the goods and services for which the first-mentioned mark is registered                                                                                       
+    </p>
+    <p></p>
+    <p>
+      (2) The use must be a continuous use of the trademark in India                                     
+    </p>
+    <p></p>
+    <p>
+      (3) The trademark must be used by the proprietor in order to avail the protection       
+    </p>
+    <p></p>
+    <p>
+      (4) The mark must have been used from a date prior to the use of the registered trademark or the date of registration whichever is earlier.
+    </p>
+    <p></p>
+    <p>
+      Kamat Hotels (India) Ltd. and Royal Orchid Hotels Ltd.(2018) 1 SCC 728                 The court reaffirmed the principles of prior use. The following requirements need to be met in order for prior usage to be considered against a trademark that has been registered in India:
+    </p>
+    <p></p>
+    <p>
+      (1) The trademark and the subsequently registered mark may be identical or similar.
+    </p>
+    <p></p>
+    <p>
+      (2) The trademark must be applied to the same category of goods as the mark that was subsequently registered. If it falls under a different category, further rules would need to be applied, such as the need that the mark be well-known in India and that its use be harmful to the prior user’s goodwill.
+    </p>
+    <p></p>
+    <p>
+      (3) The prior use must involve a brand registered on Indian territory. A trademark registered in India cannot be invalidated by prior usage in other countries
+    </p>
+    <p></p>
+    <p>
+      (4) The trademark must be used consistently. In other words, it shouldn’t be a short-term use. It is crucial that the trademark has some reputation and link with the owner.
+    </p>
+    <p></p>
+    <p>
+      (5) The trademark must have been in use prior to the date of registration or the usage of the trademark whose registration is being challenged.
+    </p>
+    <p></p>
+    <br></br>
+    <h4>DOCTRINE OF EXHAUSTION</h4>
+    <p></p>
+    <p>
+      The doctrine of Exhaustion implies that once a valid transaction of sale takes place then the owner of the intellectual property in question cannot control or prevent the further sale of the goods bearing the said intellectual property. A trademark right is often exhausted by the first sale of a product or its placement in the market. The underlying idea is that after the right holder has obtained an economic return from the initial sale or placement in the market, the purchaser or transferee of the products or services is free to use or dispose of it. The distribution right is linked to exhaustion of right. The right to distribute objects denotes the release of such things by or with the permission of the owner as a result of ownership transfer.
+    </p>
+    <br></br>
+    <h4>NATIONAL EXHAUSTION:</h4>
+    <p></p>
+    <p>
+      One of the constraints of intellectual property rights is national exhaustion of rights. Once a product covered by an IP right has been marketed, either by the manufacturer or by others with his permission, the manufacturer’s commercial exploitation IP rights over that product are exhausted. Any proper use of the products after the initial sale would not constitute infringement. The idea of national exhaustion does not allow the IP owner to exercise commercial control over items placed on the domestic market by the IP owner or with his consent. However, the IP owner (or his authorised licensee) may still object to the importation of original items marketed in other countries based on the IP.
+    </p>
+    <br></br>
+    <h4>REGIONAL EXHAUSTION:</h4>
+    <p></p>
+    <p>
+      The first sale of the IP protected product by the IP owner or with his consent exhausts any IP rights over these given products not only domestically, but also within the entire region, and parallel imports within the region can no longer be opposed based on the IP right.
+    </p>
+    <br></br>
+    <h4>INTERNATIONAL EXHAUSTION:</h4>
+    <p></p>
+    <p>
+      Once a product is exported to a market outside of India, further sales of the same product there fall under the purview of international exhaustion of rights; however, if the goods are purchased from the international market and sent back to India for the purpose of selling them here, parallel imports are not permitted.
+    </p>
 
 
     
