added: copyright notes

--- a/Pages/copright.html
+++ b/Pages/copright.html
@@ -247,5 +247,101 @@
    <p>
     In conclusion, even if fair use is a useful provision, it necessitates a careful and prudent approach that takes into account the rights of content producers as well as the advantages that using and accessing creative works has for society as a whole.
    </p>
+   <br></br>
+   <h1>
+    LANDMARK CASES UNDER COPYRIGHT
+    </h1>
+    <p></p>
+    <h3>Super Cassettes Industries Limited vs Google and YouTube AIR 2004 Delhi 326, 112 (2004) DLT 549</h3>
+    <p></p>
+    <h4>FACT:</h4>
+    <p></p>
+    <p>
+        The Delhi High Court received a case from Super Cassettes Industries (SCIL), a business that releases music under the T-Series label, against YouTube and its parent firm Google. SCIL claimed that by posting videos of its copyrighted music on YouTube.com without getting the required licence or consent from SCIL, YouTube and Google were violating its copyright. Amit Sibal, the lawyer for SCIL, said that YouTube and Google were making money off of this violation by running advertisements on the films and collecting money based on how many people visited the website. 
+    </p>
+    <p></p>
+    <h4>ISSUE:</h4>
+    <p></p>
+    <p>
+        The main point of contention in this case concerned the purported copyright violations by YouTube and Google, which SCIL said were occurring when the businesses copied, altered, distributed, communicated, transmitted, disseminated, or displayed SCIL’s copyrighted audio-visual works without permission. In addition to requesting compensation for the income it lost as a result of the copyright infringement, SCIL filed a lawsuit to put an end to these actions.  
+    </p>
+    <p></p>
+    <h4>LAW:</h4>
+    <p></p>
+    <p>
+        Section 14: 
+        Owners of copyright, like SCIL, own exclusive rights to their creations, including the ability to replicate, disseminate, and modify them.
+    </p>
+    <p></p>
+    <p>
+        Section 51: 
+        Infringement is defined as any action that breaches a copyright owner’s exclusive rights.
+    </p>
+    <p></p>
+    <p>
+        Section 55: 
+        The court can impose restrictions or prevent copyright infringement by granting injunctions.
+    </p>
+    <p></p>
+    <h4>JUDGEMENT:</h4>
+    <p></p>
+    <p>
+        Following Amit Sibal’s arguments, the Delhi High Court issued a notice and summons to Google and YouTube. Furthermore, YouTube and Google were ordered by the court to refrain from any further copyright infringement and from duplicating, modifying, distributing, communicating, transmitting, disseminating, or exhibiting SCIL’s copyrighted audio-visual works on their websites. In order to protect SCIL from more injury while the legal processes were ongoing, an interim injunction was obtained.
+    </p>
+    <p></p>
+    <p>
+        The court’s ruling suggests that SCIL’s exclusive and legitimate copyright in the in dispute audio-visual works is acknowledged. The injunction implies that the court thought the claimed copyright infringement was a significant issue and gave credence to SCIL’s allegations. Before rendering a decision on the claims of copyright infringement and any possible damages or remedies, the court will probably review the facts and arguments put up by both sides in a complete trial. 
+    </p>
+    <p></p>
+    <h3>Star India (P) Ltd. V. Piyush Agarwal & Ors, C.S. (O.S.) No. 2722/2012, Del Hc</h3>
+    <p></p>
+    <h4>FACT:</h4>
+    <p></p>
+    <p>
+        A 2012 deal gives Star India Pvt. Ltd (plaintiff) exclusive media rights to cricket events hosted by the Board of Control for Cricket in India (BCCI), including 72-hour broadcast rights for SMSs. Due to the defendants’ use of material in the public domain to provide comparable services, the plaintiff has accused them of infringement.
+    </p>
+    <p></p>
+    <h4>ISSUE:</h4>
+    <p></p>
+    <p>
+        1. Whether the rights being asserted are independent of the 1957 Copyright Act.
+        2. If, following the initial broadcast, the plaintiff holds exclusive rights over material that    enters the public domain.
+    </p>
+    <p></p>
+    <h4>LAW:</h4>
+    <p></p>
+    <p>
+        1.	Section 13: 
+        Describes the types of works that are protected by copyright, including theatrical, musical, literary, artistic, cinematographic, and sound works.
+    <p></p>
+    <p>
+        2.	Section 38: 
+        It involves performers’ rights, such as the ability to testify on whether a cricket match qualifies as a performance.
+    </p>
+    <p></p>
+    <p>
+        3.	Section 38A: 
+        Establishes performers’ exclusive rights, which is important to take into account while evaluating the plaintiff's claim about performances during cricket matches.
+    </p>
+    <p></p>
+    <p>
+        4.	Section 51:
+        Addresses copyright infringement, explains what behaviours are considered violations, and offers copyright owners recourse.
+    <p></p>
+    <p>
+        5.	Section 16:
+        States that there is no copyright unless it is granted by the Act, therefore highlighting the particular types of works that fall under its protection.
+    </p>
+    <p></p>
+    <p>
+        6.	Section 2(q) and section 2(qq): 
+        Provide definitions for “performance” and “performer,” as these terms are essential to understanding the types of rights associated with cricket match events.          
+    </p>
+    <p></p>
+    <h4>JUDGEMENT:</h4>
+    <p></p>
+    <p>
+        The plaintiff’s claim is dismissed by the court on the grounds that the 2012 agreement does not give rise to any legal rights. It highlights that content from a copyrighted work that is in the public domain is not protected by copyright claims. The court forbids the defendants from utilising the original audio and/or video recordings unless they can demonstrate fair dealing, and it grants them a two-minute break during which they may utilise content from the plaintiff’s first broadcast. The lawsuits are dropped.
+    </p>
 </body>
 </html>
